test/error/macro_arg_bad_eq.sv
// pattern: bad char after argument name: '#'
`define MACRO(a#)
